# spcpoint

./: CMakeLists.txt  README.md  appveyor.yml
src/: Makefile  SPCFile.cpp  SPCFile.h  spcpoint.cpp  spcpoint.sln  spcpoint.vcxproj  spcpoint.vcxproj.filters
